# esp32

./: CMakeLists.txt  README.md  sdkconfig
components/bsp/: CMakeLists.txt
components/bsp/camera/: ovcamera.c  ovcamera.h
components/bsp/common/: id_define.h  init_common.c  init_common.h  readme.txt
components/bsp/led/: CMakeLists.txt  led.c  led.h
components/bsp/sdcard/: tfcard.c  tfcard.h
components/bsp/spi_lcd/: lcd_config.h  lcd_drv.c  lcd_sequence.c
components/bsp/usart/: usart.c  usart.h
components/bsp/wifi/: wifi.c  wifi.h
main/: CMakeLists.txt  Kconfig.projbuild  idf_component.yml  main.c
tools/: ceshi.py  ceshi1.py  data.txt  data_test.py  test_data.py
